testsuite/poke.pkl/format-diag-3.pk
/* { dg-do compile } */

format ("x%f16d", 1UH); /* { dg-error "" } */
